gitignore: add files related to direnv
This commit modifies gitignore to ignore files related to direnv, which
is a developer tool whose files shouldn't be committed into the
repository.

Signed-off-by: Ryan Drew <ryan.drew@isovalent.com>

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,7 @@ bpf/.cache
 
 # Include dummy bpf object necessary for XDP_TX
 !test/l4lb/bpf_xdp_veth_host.o
+
+# Files used for direnv
+.direnv
+.envrc
