--- a/.github/actions/azure/k8s-versions.yaml
+++ b/.github/actions/azure/k8s-versions.yaml
@@ -2,12 +2,12 @@
 ---
 include:
   - version: "1.25"
-    location: westeurope
+    location: westus3
     index: 1
   - version: "1.26"
-    location: westus
+    location: westus2
     index: 2
   - version: "1.27"
-    location: eastasia
+    location: eastus2
     index: 3
     default: true
