--- a/.github/actions/aws/k8s-versions.yaml
+++ b/.github/actions/aws/k8s-versions.yaml
@@ -2,15 +2,15 @@
 ---
 include:
   - version: "1.23"
-    region: eu-central-1
+    region: ca-west-1
   - version: "1.24"
-    region: eu-west-1
+    region: us-west-2
   - version: "1.25"
-    region: ap-northeast-1
+    region: us-west-1
   - version: "1.26"
     region: us-east-2
   - version: "1.27"
     region: ca-central-1
   - version: "1.28"
-    region: eu-north-1
+    region: us-east-1
     default: true
