--- a/.github/actions/gke/k8s-versions.yaml
+++ b/.github/actions/gke/k8s-versions.yaml
@@ -2,18 +2,18 @@
 ---
 k8s:
   - version: "1.24"
-    zone: europe-west6-b
+    zone: us-west1-b
     vmIndex: 1
   - version: "1.25"
-    zone: us-west2-a
+    zone: us-west2-c
     vmIndex: 2
   - version: "1.26"
-    zone: asia-northeast1-c
+    zone: us-west3-a
     vmIndex: 3
   - version: "1.27"
-    zone: europe-north1-b
+    zone: us-east4-b
     vmIndex: 4
   - version: "1.28"
-    zone: us-east5-a
+    zone: us-east1-c
     vmIndex: 5
     default: true
