--- a/.github/workflows/conformance-ingress.yaml
+++ b/.github/workflows/conformance-ingress.yaml
@@ -301,7 +301,7 @@ jobs:
         if: ${{ !success() }}
         uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
         with:
-          name: cilium-sysdump-out
+          name: cilium-sysdump-out-${{ matrix.name }}
           path: cilium-sysdump-out-*.zip
           retention-days: 5
 
