--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -88,6 +88,9 @@ jobs:
           - kernel: '6.1-20231220.153727'
             ci-kernel: '61'
           # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          - kernel: '6.3-20231024.083723'
+            ci-kernel: '63'
+          # renovate: datasource=docker depName=quay.io/lvh-images/kind
           - kernel: 'bpf-next-20231220.153727'
             ci-kernel: 'netnext'
     timeout-minutes: 60
