--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -1,5 +1,6 @@
 name: Cilium IPsec upgrade (ci-ipsec-upgrade)
 
+# test
 # Any change in triggers needs to be reflected in the concurrency group.
 on:
   workflow_dispatch:
