--- a/contrib/testing/kind-egressgw-values.yaml
+++ b/contrib/testing/kind-egressgw-values.yaml
@@ -1,6 +1,6 @@
 bpf:
   masquerade: true
-kubeProxyReplacement: "strict"
+kubeProxyReplacement: "true"
 l7Proxy: false
 egressGateway:
   enabled: true
