--- a/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumclusterwidenetworkpolicies.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumclusterwidenetworkpolicies.yaml
@@ -172,8 +172,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -1113,8 +1113,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -1643,8 +1643,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -2424,8 +2424,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -2952,7 +2952,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -3908,7 +3908,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -4444,7 +4444,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -5237,7 +5237,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
