--- a/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
@@ -176,8 +176,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -1117,8 +1117,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -1647,8 +1647,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -2428,8 +2428,8 @@ spec:
                           cidrGroupRef:
                             description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                               object. A CiliumCIDRGroup contains a list of CIDRs that
-                              the endpoint, subject to the rule, can (Ingress) or
-                              cannot (IngressDeny) receive connections from.
+                              the endpoint, subject to the rule, can (Ingress/Egress)
+                              or cannot (IngressDeny) receive connections from.
                             maxLength: 253
                             pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                             type: string
@@ -2956,7 +2956,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -3912,7 +3912,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -4448,7 +4448,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
@@ -5241,7 +5241,7 @@ spec:
                             cidrGroupRef:
                               description: CIDRGroupRef is a reference to a CiliumCIDRGroup
                                 object. A CiliumCIDRGroup contains a list of CIDRs
-                                that the endpoint, subject to the rule, can (Ingress)
+                                that the endpoint, subject to the rule, can (Ingress/Egress)
                                 or cannot (IngressDeny) receive connections from.
                               maxLength: 253
                               pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
